fixed alignment of icons for accounts

--- a/src/main/resources/static/css/accounts.css
+++ b/src/main/resources/static/css/accounts.css
@@ -3,6 +3,12 @@
     width: 34px;
 }
 
+.account-select-icon:not(i) {
+    height: 100%;
+    width: 100%;
+    padding: 10%
+}
+
 .account-icon-big {
     height: 4rem !important;
     width: 4rem !important;
@@ -13,6 +19,12 @@
     height: 4rem !important;
     width: 4rem !important;
     min-width: 4rem;
+}
+
+.account-icon-big .account-select-icon:not(i) {
+    height: 100%;
+    width: 100%;
+    padding: 0;
 }
 
 .account-square-border {
